Fix minor layout issues in media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ h1, h2 {
 /* INTRO SECTION */
 
 .home-intro-section, .about-intro-section {
-    height: 600px;
+    height: 500px;
 }
 
 .home-intro {
@@ -244,6 +244,8 @@ a {
         
 .about-us-cover-bg {
     background: url("../images/lee-chinyama-about.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100%;
     background-position: top;
 } 
@@ -492,6 +494,10 @@ footer p {
 .home-intro-section {
     height: 600px;
     padding-bottom: 100px;
+}
+
+.about-us-container {
+    width: 100%;
 }
 
 .contact-us-form {
